@@ -12,7 +12,7 @@ $form->indicator('my_hidden');
 
 $form->element('Button')->name('my_button')->value(1);
 $form->element('Checkbox')->name('my_checkbox1')->value(1)
-    ->attrs( checked => 'checked' );
+    ->attrs({ checked => 'checked' });
 $form->element('Checkbox')->name('my_checkbox2')->value(0);
 $form->element('ContentButton')->name('my_contentbutton')->value(1);
 $form->element('Hidden')->name('my_hidden')->value(1);
@@ -20,14 +20,14 @@ $form->element('Image')->name('my_image')->value(1);
 
 #$form->element('Password')->name('my_password')->value(1)->fill(1);
 $form->element('Radio')->name('my_radio1')->value(1)
-    ->attrs( checked => 'checked' );
+    ->attrs({ checked => 'checked' });
 $form->element('Radio')->name('my_radio2')->value(0);
 $form->element('Radiogroup')->name('my_radiogroup')->values( [ 1, 0 ] )
-    ->attrs( checked => 'checked' );
+    ->attrs({ checked => 'checked' });
 $form->element('Reset')->name('my_reset')->value(1);
 $form->element('Select')->name('my_select')
     ->options( [ [ 0 => 'unsubscribed' ], [ 1 => 'subscribed' ] ] )
-    ->attrs( selected => 'selected' );
+    ->attrs({ selected => 'selected' });
 $form->element('Submit')->name('my_submit')->value(1);
 $form->element('Text')->name('my_text')->value(1);
 $form->element('Textarea')->name('my_textarea')->value(1);
