@@ -8,7 +8,7 @@ use HTML::FormFu;
 my $form = HTML::FormFu->new->indicator( sub {1} );
 
 $form->element('Text')->name('foo')->constraint('AllOrNone')
-    ->others(qw/ bar baz bif /);
+    ->others([qw/ bar baz bif /]);
 
 $form->element('Text')->name('bar');
 $form->element('Text')->name('baz');
