@@ -8,7 +8,7 @@ use HTML::FormFu;
 my $form = HTML::FormFu->new;
 
 $form->element('Text')->name('foo')->constraint('DependOn')
-    ->others(qw/ bar baz /)->force_errors(1);
+    ->others([qw/ bar baz /])->force_errors(1);
 $form->element('Text')->name('bar');
 $form->element('Text')->name('baz');
 
