@@ -8,7 +8,7 @@ use HTML::FormFu;
 my $form = HTML::FormFu->new;
 
 $form->element('Text')->name('foo')->constraint('MinMaxFields')
-    ->others(qw/ bar baz boz/)->min(1)->max(2)->force_errors(1);
+    ->others([qw/ bar baz boz/])->min(1)->max(2)->force_errors(1);
 $form->element('Text')->name('bar');
 $form->element('Text')->name('baz');
 $form->element('Text')->name('boz');
